Feature: CE-2470 2fa mfa popup

--- a/src/custom/styles/screens/ProfileTwoFactorAuthScreen.pcss
+++ b/src/custom/styles/screens/ProfileTwoFactorAuthScreen.pcss
@@ -7,3 +7,33 @@
     }
   }
 }
+
+.profile-2fa-mfa-popup {
+  .popup-content-item {
+    color: #fff;
+    text-align: center;
+    margin: 15px 0;
+    font-size: 14px;
+  }
+
+  .mfa-popup-header {
+    position: relative;
+  }
+
+  .mfa-popup-close-button {
+    position: absolute;
+    right: -3px;
+    top: -6px;
+    color: #999;
+    font-size: 21px;
+    cursor: pointer;
+  }
+
+  .cr-button {
+    line-height: 12px;
+  }
+
+  .auth2fa-mfa-footer {
+    text-align: center;
+  }
+}
