Feature: CE-2322 add form text

--- a/src/components/WhiteList/WhiteList.pcss
+++ b/src/components/WhiteList/WhiteList.pcss
@@ -1,4 +1,13 @@
 .cr-white-list {
+  .cr-email-form {
+    max-width: 567px;
+    width: 567px;
+  }
+
+  .cr-email-form__button {
+    width: 560px;
+  }
+
   &__title {
     color: var(--color-white);
     font-family: Roboto;
