Feature: CE-2080 CE-2013 CE-2014

--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -266,6 +266,15 @@
             }
         }
     }
+
+    .cr-table-container {
+        max-width: 960px;
+        overflow-x: auto;
+
+        .cr-table thead th {
+            top: 0;
+        }
+    }
 }
 
 
