--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -178,14 +178,14 @@
 
         &__header {
             font-weight: 600;
-            font-size: 20px;
+            font-size: 1.2em;
             line-height: 23px;
             color: #E5E6EF;
         }
 
         &__subheader {
             font-weight: normal;
-            font-size: 14px;
+            font-size: 0.9em;
             line-height: 16px;
             color: #7D9794;
         }
