Feature: CE-2080 fix margins

--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -321,6 +321,7 @@
         .level-card {
             flex: 0 0 100%;
             margin-bottom: 10px;
+            margin-right: 0 !important;
         }
 
         .section--transparent {
