Fix: add soon part to header

--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -6,6 +6,11 @@
     padding: 0;
     height: 60px;
 
+    .soon {
+        color: #72D2C7;
+        padding: 0 5px;
+    }
+
     &__logo {
         margin-right: 50px;
     }
@@ -345,6 +350,12 @@
                     cursor: pointer;
                     color: #FFD541;
                     background: black;
+                }
+
+                &.soon:hover {
+                    cursor: default;
+                    color: #FFFFFF;
+                    background-color: #222627;
                 }
 
                 .icon {
