--- a/src/custom/styles/screens/ProfileTwoFactorAuthScreen.pcss
+++ b/src/custom/styles/screens/ProfileTwoFactorAuthScreen.pcss
@@ -75,13 +75,32 @@
   .cr-modal__container-content {
     text-align: center;
     padding: 0 calc(var(--gap) * 10.23) !important;
+
+
   }
 
   .cr-modal__container {
     width: calc(var(--gap) * 89.3);
+
+    @media screen and (max-width: 600px) {
+      width: calc(var(--gap) * 64.3);
+    }
   }
 
   .cr-modal__container-header {
     border-bottom: 1px solid #54b489;
+  }
+}
+
+
+@media screen and (max-width: 600px) {
+  .profile-2fa-mfa-popup {
+    .cr-modal__container-content {
+      padding: 0 calc(var(--gap) * 5.23) !important;
+    }
+
+    .cr-modal__container {
+      width: calc(var(--gap) * 64.3) !important;
+    }
   }
 }
