--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -238,6 +238,14 @@
         font-size: 12px;
         white-space: nowrap;
 
+        &--referral {
+            td:first-child,
+            th:first-child {
+                position: relative;
+                min-width: 240px;
+            }
+        }
+
         tr {
             background-color: #222627;
             border-bottom: 1px solid var(--header-border);
