--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -355,3 +355,15 @@
         }
     }
 }
+
+
+@media (max-width: 500px) {
+    .pg-referral-commission {
+        .level-card {
+            margin-bottom: 10px;
+            margin-right: 0 !important;
+            flex: 0 0 100% !important;
+            min-width: 100%;
+        }
+    }
+}
