Fix: CE-2470 fix mobile version

--- a/src/custom/styles/screens/ProfileTwoFactorAuthScreen.pcss
+++ b/src/custom/styles/screens/ProfileTwoFactorAuthScreen.pcss
@@ -82,9 +82,9 @@
   .cr-modal__container {
     width: calc(var(--gap) * 89.3);
 
-    @media screen and (max-width: 600px) {
+    /* @media screen and (max-width: 600px) {
       width: calc(var(--gap) * 64.3);
-    }
+    } */
   }
 
   .cr-modal__container-header {
@@ -93,14 +93,14 @@
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 550px) {
   .profile-2fa-mfa-popup {
     .cr-modal__container-content {
       padding: 0 calc(var(--gap) * 5.23) !important;
     }
 
     .cr-modal__container {
-      width: calc(var(--gap) * 64.3) !important;
+      width: calc(var(--gap) * 60) !important;
     }
   }
 }
