Feature: CE-2470 fix mobile version

--- a/src/custom/styles/screens/ProfileTwoFactorAuthScreen.pcss
+++ b/src/custom/styles/screens/ProfileTwoFactorAuthScreen.pcss
@@ -104,3 +104,23 @@
     }
   }
 }
+
+@media screen and (max-width: 380px) {
+  .profile-2fa-mfa-popup {
+    .cr-modal__container {
+      width: calc(var(--gap) * 58) !important;
+    }
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .profile-2fa-mfa-popup {
+    .cr-modal__container-content {
+      padding: 0 calc(var(--gap) * 4.23) !important;
+    }
+
+    .cr-modal__container {
+      width: calc(var(--gap) * 48) !important;
+    }
+  }
+}
