--- a/src/containers/Header/Header.pcss
+++ b/src/containers/Header/Header.pcss
@@ -6,6 +6,8 @@ header {
 .pg-header {
   background-color: var(--header-background-cover);
   margin: 0 auto;
+  display: flex;
+  width: 100%;
 
   .pg-logo__img {
     height: calc(var(--gap) * 3.666);
@@ -29,8 +31,7 @@ header {
   &__navbar {
     background: var(--background-dark);
     padding-top: 3px;
-    margin-left: 30px;
-    display: block;
+    display: flex;
     width: 100%;
   }
 
@@ -38,7 +39,8 @@ header {
     align-items: center;
     box-shadow: 1px 1px 5px rgba(46, 76, 128, 0.2);
     display: flex;
-    height: calc(var(--gap) * 10.67);
+    height: 60px;
+    width: 100%;
   }
 
   &__toggler {
