--- a/src/custom/styles/screens/ReferralCommissionScreen.pcss
+++ b/src/custom/styles/screens/ReferralCommissionScreen.pcss
@@ -8,6 +8,10 @@
         max-width: 960px;
         overflow-x: auto;
 
+        &::-webkit-scrollbar-thumb {
+            background-color: #141717;
+        }
+
         .cr-table thead th {
             top: 0;
         }
@@ -349,4 +353,9 @@
             }
         }
     }
+}
+
+
+.cr-table-container::-webkit-scrollbar-thumb {
+    background-color: #141717;
 }
