Feature: CE-2801 credit card form

--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -13,3 +13,4 @@
 @import "./ProfileVerification.pcss";
 @import "./ProgressLabel.pcss";
 @import "./Questionnaire.pcss";
+@import "./BuyWithCreditCard/CreditCardBuyForm.pcss";
