--- a/src/containers/Confirm/Documents/Documents.pcss
+++ b/src/containers/Confirm/Documents/Documents.pcss
@@ -1,5 +1,5 @@
 .pg-confirm__content-documents {
-  color: var(--secondary-contrast-cta-color);
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
   font-size: calc(var(--gap) * 2.33);
@@ -212,53 +212,8 @@
   .react-date-picker {
     width: 100%;
 
-    &__wrapper {
+    &__content {
       width: 100%;
-    }
-
-    &__inputGroup {
-      &__year {
-        width: calc(var(--gap) * 10) !important;
-      }
-    }
-  }
-}
-
-@media (max-width: 576px) {
-  .pg-confirm {
-    &__content-documents-col {
-      max-width: 100%;
-
-      &-row {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-
-        &-content-3 {
-          width: 100%;
-
-          .dropdown-toggle {
-            height: calc(var(--gap) * 5.05) !important;
-          }
-        }
-
-        &-content-label {
-          margin-top: calc(var(--gap) * (-0.8)) !important;
-        }
-
-        &-content-2 {
-          text-align: center;
-          width: 100%;
-        }
-
-        fieldset {
-          width: 100%;
-
-          legend {
-            top: -14px;
-          }
-        }
-      }
     }
   }
 }
