--- a/src/containers/style.pcss
+++ b/src/containers/style.pcss
@@ -23,3 +23,4 @@
 @import './Sidebar/Sidebar.pcss';
 @import './ProfileTwoFactorAuth/ProfileTwoFactorAuth.pcss';
 @import './ProfileApiKeys/ProfileApiKeys.pcss';
+@import './ProfileVerification/ProfileVerification.pcss';
