Feature: CE-2801 add promo and faq

--- a/src/custom/styles/containers/style.pcss
+++ b/src/custom/styles/containers/style.pcss
@@ -14,3 +14,5 @@
 @import "./ProgressLabel.pcss";
 @import "./Questionnaire.pcss";
 @import "./BuyWithCreditCard/CreditCardBuyForm.pcss";
+@import "./BuyWithCreditCard/CreditCardPromo.pcss";
+@import "./BuyWithCreditCard/CreditCardFaq.pcss";
