--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
@@ -75,6 +75,16 @@
             color: #fff;
             font-size: 14px;
             text-indent: 13px;
+
+            &:focus {
+                outline: none;
+            }
+
+            &::-webkit-inner-spin-button, 
+            &::-webkit-outer-spin-button { 
+            -webkit-appearance: none; 
+            margin: 0; 
+            }
         }
 
         &__label {
