--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
@@ -43,6 +43,140 @@
     }
 
     .buy-form {
+        .cr-modal .cr-modal__container {
+            width: calc(var(--big-gap) * 9);
+
+            .cr-modal__container-header {
+                background-color: var(--color-green);
+                height: 60px;
+                padding: 7px;
+            }
+        }
+
+        &__modal {
+            &-header {
+                position: relative;
+                color: #fff;
+
+                p {
+                    text-transform: uppercase;
+                    font-size: 14px;
+                    font-weight: bold;
+                }
+            }
+
+            &-close {
+                position: absolute;
+                color: #fff;
+                cursor: pointer;
+                right: 11px;
+                top: -12px;
+                font-size: 28px;
+                transform: scaleY(.8);
+            }
+
+            &-amount {
+                text-align: center;
+                color: #fff;
+                font-size: 18px;
+                margin: 20px 0 0;
+                span {
+                    color: #ffd567;
+                    font-weight: bold;
+                }
+            }
+
+            &-inputs {
+                margin-top: 25px;
+                position: relative;
+                z-index: 1;
+
+                .buy-form__input {
+                    width: 205px;
+                }
+            }
+
+            &-divider {
+                position: relative;
+                margin-top: 25px;
+
+                .credit-card-promo__divider-arrow {
+                    background-color: var(--bg-color-light2);
+                }
+            }
+
+            &-table {
+                font-size: 18px;
+                text-transform: uppercase;
+                margin-top: 20px;
+
+                span {
+                    line-height: 48px;
+                }
+
+                &-top,
+                &-bottom {
+                    height: 48px;
+                    padding: 0 16px;
+                }
+
+                & > div {
+                    display: flex;
+                    justify-content: space-between;
+                }
+
+                &-top {
+                    color: var(--text-color-header);
+                    span:first-child {
+                        color: var(--input-border);
+                    }
+                }
+
+                &-bottom {
+                    background-color: var(--bg-color-dark1);
+                    color: #fff;
+                }
+            }
+
+            &-terms {
+                margin-top: 20px;
+
+                &-header {
+                    color: var(--limits-text-color);
+                    font-size: 14px;
+                    margin-bottom: 6px;
+                }
+
+                &-body {
+                    background-color: var(--bg-color-dark1);
+                    color: var(--limits-text-color);
+                    font-size: 11px;
+                    padding: 10px 12px;
+                    height: 110px;
+                    overflow-y: scroll;
+                }
+            }
+
+            &-footer {
+                display: flex;
+                justify-content: center;
+                padding: 25px 0 32px;
+
+                &-button {
+                    height: 40px;
+                    width: 170px;
+                    line-height: 40px;
+                    font-size: 16px;
+                    color: var(--bg-color-dark1);
+                    border-radius: 4px;
+                    background: var(--color-yellow);
+                    text-transform: uppercase;
+                    cursor: pointer;
+                    text-align: center;
+                }
+            }
+        }
+
         &__content {
             max-width: 620px;
             margin: 0 auto;
