--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
@@ -160,7 +160,7 @@
             &-footer {
                 display: flex;
                 justify-content: center;
-                padding: 25px 0 32px;
+                padding: 25px 0 0;
 
                 &-button {
                     height: 40px;
