Fix header and footer

--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -915,6 +915,10 @@
             right: auto;
             left: 0;
         }
+
+        .soon {
+            font-size: 11px;
+        }
     }
 }
 
