Fix: update style to baseapp header

--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -150,6 +150,8 @@
             a {
                 text-decoration: none;
                 color: white;
+                font-size: 15px;
+                font-weight: bold;
             }
         }
 
@@ -424,6 +426,7 @@
     }
 
     .language {
+        margin-left: 10px;
         .desktop-switcher-button {
             span {
                 color: #ffd541;
