--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -33,6 +33,7 @@
 
         &_right {
             justify-content: flex-end;
+            padding-right: 15px;
         }
 
 
@@ -255,7 +256,14 @@
                 color: #ffffff;
                 letter-spacing: 0.2px;
                 font-size: 14px;
-                padding-right: 10px;
+            }
+
+            .icon {
+                padding-left: 10px;
+            }
+
+            .slash {
+                padding: 0 10px;
             }
         }
 
@@ -423,10 +431,20 @@
                 align-items: center;
             }
         }
+
+        &.orders {
+            margin-right: 31px;
+        }
+
+        &.assets {
+            margin-right: 20px;
+        }
     }
 
     .language {
-        margin-left: 10px;
+        margin-left: 23px;
+        margin-right: 10px;
+
         .desktop-switcher-button {
             span {
                 color: #ffd541;
@@ -754,7 +772,7 @@
             .dropdown-block {
                 width: 100%;
                 height: auto;
-                margin-right: 0;
+                margin: 0;
                 padding: 15px 10px;
                 flex-direction: column;
                 justify-content: flex-start;
