Fix: fix issue with box-shadow to FF browser

--- a/src/custom/styles/screens/WalletsScreen.pcss
+++ b/src/custom/styles/screens/WalletsScreen.pcss
@@ -40,6 +40,12 @@
       }
     }
 
+    &__input {
+      input {
+        box-shadow: none;
+      }
+    }
+
     &__deep {
       .cr-button {
         font-family: var(--font-family);
