Update style header

--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -152,7 +152,8 @@
                 text-decoration: none;
                 color: white;
                 font-size: 15px;
-                font-weight: bold;
+                font-family: IBM Plex Sans;
+                font-weight: 500;
             }
         }
 
@@ -913,6 +914,7 @@
                 color: black;
                 cursor: pointer;
                 height: 43px;
+
 
                 a {
                     width: 100%;
