Fix issue with header base app

--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -176,8 +176,9 @@
         .sign-up {
             border: 1px solid rgba(255, 255, 255, 0.5);
             border-radius: 3px;
-            padding: 7px;
-            width: 100px;
+            padding: 8px 13px;
+            min-width: 100px;
+            width: auto;
             text-align: center;
         }
 
