Feature: CE-3024 auto translate

--- a/src/custom/styles/style.pcss
+++ b/src/custom/styles/style.pcss
@@ -6,3 +6,5 @@
 @import "./components/style.pcss";
 @import "../components/Referral/Button/button.pcss";
 @import "../components/CardDepositFiat/CardDepositFiat.pcss";
+
+@import "./components/googleTranslate.pcss";
