Fix issue with user avatar to FF

--- a/src/containers/NavBar/NavBar.pcss
+++ b/src/containers/NavBar/NavBar.pcss
@@ -838,6 +838,9 @@
                 padding-bottom: 0;
                 .desktop-switcher-button {
                     margin: 0;
+                    .icon {
+                        display: none;
+                    }
                 }
 
                 .dropdown-menu {
