Feature: CE-3024 fix auto translate

--- a/src/components/SignIn/SignIn.pcss
+++ b/src/components/SignIn/SignIn.pcss
@@ -112,7 +112,8 @@
   &__button {
     margin-left: 0;
     height: 40px;
-    background: #2e4c80;
+    background: var(--button-primary);
+    border: none;
     border-radius: 3px;
     font-style: normal;
     font-weight: normal;
