--- a/src/custom/styles/screens/ProfileScreen.pcss
+++ b/src/custom/styles/screens/ProfileScreen.pcss
@@ -114,4 +114,8 @@
   .pg-exchange-modal-submit-body {
     text-align: center;
   }
+
+  &__btn-secondary-change {
+    background: var(--button-primary);
+  }
 }
