--- a/src/screens/ProfileScreen/ProfileScreen.pcss
+++ b/src/screens/ProfileScreen/ProfileScreen.pcss
@@ -163,6 +163,8 @@
 
     .pg-profile-page__btn-secondary-change {
       margin: calc(var(--big-gap) / 3) 0 0 calc(var(--big-gap) / 3);
+      border: none;
+      color: #fff;
     }
 
     label {
