--- a/src/components/SignUp/SignUp.pcss
+++ b/src/components/SignUp/SignUp.pcss
@@ -141,7 +141,9 @@
   &__button {
     margin-left: 0;
     height: 40px;
-    background: #2e4c80 !important;
+    background: var(--button-primary);
+    border: none;
+    width: 100%;
     border-radius: 3px;
     font-style: normal;
     font-weight: normal;
