Feature: CE-3024 trading buy/sell

--- a/src/containers/Order/Order.pcss
+++ b/src/containers/Order/Order.pcss
@@ -237,6 +237,7 @@
           font-weight: normal;
           outline: none;
           padding: calc(var(--gap) * 1.26);
+          text-transform: uppercase;
 
           &--disabled {
             opacity: 0.5;
