Feature: CE-3024 styling

--- a/src/components/style.pcss
+++ b/src/components/style.pcss
@@ -16,3 +16,4 @@
 @import "./CurrencyInfo/CurrencyInfo.pcss";
 @import "./OrderForm/OrderForm.pcss";
 @import "./WhiteList/WhiteList.pcss";
+@import "./GoogleTranslate/GoogleTranslate.pcss";
