Feature: CE-3024 add bottom text

--- a/src/components/GoogleTranslate/GoogleTranslate.pcss
+++ b/src/components/GoogleTranslate/GoogleTranslate.pcss
@@ -40,4 +40,18 @@
             outline: none;
         }
     }
+
+    &__bottom {
+        color: #777;
+        font-size: 12px;
+        span {
+            filter: grayscale(100) brightness(10);
+            position: relative;
+            opacity: 0.3;
+            top: 2px;
+            display: inline-block;
+            margin-left: 3px;
+            top: 6px;
+        }
+    }
 }
