--- a/src/screens/WalletsScreen/WalletsScreen.pcss
+++ b/src/screens/WalletsScreen/WalletsScreen.pcss
@@ -220,6 +220,11 @@
                 padding: calc(var(--gap) * 0.33) var(--gap);
                 border-radius: calc(var(--gap) * 0.33);
                 background: var(--estimated-value-background);
+                @media screen and (max-width: 768px) {
+                    left: calc(var(--gap) * 1);
+                    font-size: 12px;
+                    width: 90%;
+                }
             }
             .cr-withdraw__input {
                 width: 100%;
