--- a/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
+++ b/src/custom/styles/containers/BuyWithCreditCard/CreditCardBuyForm.pcss
@@ -430,6 +430,15 @@
             
         }
     }
+
+    .credit-card__iframe {
+        width: 540px;
+        max-width: 100vw;
+        position: relative;
+        left: -50px;
+        border: none;
+        height: 400px;
+    }
 }
 
 
